# oxifont

./: CHANGELOG.md  Cargo.toml  Dockerfile.ffi-audit  LICENSE  LICENSE-FONTS-OFL.txt  README.md  TODO.md  deny.toml
.claude/: oxiarc
crates/oxifont/: Cargo.toml  README.md  TODO.md
crates/oxifont-adapter-native/: Cargo.toml  README.md  TODO.md
crates/oxifont-adapter-native/benches/: native_bench.rs
crates/oxifont-adapter-native/src/: coretext.rs  directwrite.rs  error.rs  lib.rs  shaper_bridge.rs
crates/oxifont-adapter-native/tests/: coretext.rs  coretext_correctness.rs  directwrite.rs  linux_fallback.rs  native.rs
crates/oxifont-adapter-pure/: Cargo.toml  README.md  TODO.md
crates/oxifont-adapter-pure/benches/: font_database_find.rs
crates/oxifont-adapter-pure/src/: lib.rs
crates/oxifont-adapter-pure/tests/: cache.rs  css_matching.rs  database.rs  fallback.rs  integration.rs  lazy_loading.rs  subset_integration.rs
crates/oxifont-bundled/: Cargo.toml  README.md  TODO.md  build.rs
crates/oxifont-bundled/benches/: bundled_parse.rs
crates/oxifont-bundled/src/: catalog.rs  compressed.rs  lib.rs  provider.rs
crates/oxifont-bundled/tests/: bundled.rs  bundled_italic_mono.rs  load.rs  wasm32_compile.rs
crates/oxifont-core/: Cargo.toml  README.md  TODO.md
crates/oxifont-core/src/: axis.rs  error.rs  info.rs  lib.rs  platform_dirs.rs  sfnt.rs  traits.rs  types.rs
crates/oxifont-core/tests/: glyph_outline_compat.rs  proptest_query.rs  query_tests.rs  serde_roundtrip.rs  sfnt_table_map.rs
crates/oxifont-db/: Cargo.toml  README.md  TODO.md
crates/oxifont-db/benches/: match_best_bench.rs
crates/oxifont-db/fuzz/: Cargo.toml
crates/oxifont-db/fuzz/fuzz_targets/: fuzz_query.rs
crates/oxifont-db/src/: bridge.rs  db.rs  error.rs  face.rs  lib.rs  load.rs  locale.rs  query.rs
crates/oxifont-db/tests/: api.rs  bridge.rs  cache.rs  cache_binary.rs  coverage.rs  css_match.rs  css_matching.rs  integration.rs  locale.rs  match_best_allocations.rs  match_test.rs  query.rs
crates/oxifont-discovery/: Cargo.toml  README.md  TODO.md
crates/oxifont-discovery/benches/: scan_bench.rs
crates/oxifont-discovery/src/: fontconfig.rs  lib.rs  sfnt_partial.rs
crates/oxifont-discovery/tests/: discovery.rs  extension_filter.rs  fixture_tests.rs  fontconfig_tests.rs  mmap_tests.rs  system_tests.rs
crates/oxifont-parser/: Cargo.toml  README.md  TODO.md
crates/oxifont-parser/benches/: parse_bench.rs
crates/oxifont-parser/fuzz/: Cargo.toml
crates/oxifont-parser/fuzz/fuzz_targets/: fuzz_face_methods.rs  fuzz_parse.rs
crates/oxifont-parser/src/: lib.rs
crates/oxifont-parser/tests/: builder.rs  cff_font.rs  features.rs  outline_with_bbox.rs  parse.rs  parse_errors.rs  real_font.rs  ttc_tests.rs  variable_font.rs
crates/oxifont-subset/: Cargo.toml  README.md  TODO.md
crates/oxifont-subset/benches/: subset_font.rs
crates/oxifont-subset/fuzz/: Cargo.toml
crates/oxifont-subset/fuzz/fuzz_targets/: fuzz_subset.rs  fuzz_subset_by_gids.rs
crates/oxifont-subset/src/: cbdt.rs  cff.rs  cmap.rs  colr.rs  glyf.rs  gvar.rs  kern.rs  layout.rs  lib.rs  math.rs  os2.rs  otl.rs  otl_gpos.rs  pdf_subset.rs  sbix.rs  svg.rs  tables.rs  varfont.rs
crates/oxifont-subset/tests/: advanced.rs  bitmap_tables.rs  cff.rs  color_tables.rs  gvar.rs  hvar_rewrite.rs  kern.rs  layout_gdef.rs  layout_gpos.rs  layout_gsub.rs  options.rs  os2.rs  pdf_subset.rs  real_fonts.rs  shared_table_map.rs  subset.rs
crates/oxifont-webfont/: Cargo.toml  README.md  TODO.md
crates/oxifont-webfont/benches/: woff2_compare.rs  woff2_decode.rs  woff2_streaming.rs
crates/oxifont-webfont/fuzz/: Cargo.toml
crates/oxifont-webfont/fuzz/fuzz_targets/: fuzz_detect_auto.rs  fuzz_woff1_decode.rs  fuzz_woff2_decode.rs
crates/oxifont-webfont/src/: detect.rs  error.rs  lib.rs  sfnt.rs
crates/oxifont-webfont/src/woff1/: encode.rs  mod.rs
crates/oxifont-webfont/src/woff2/: glyf.rs  header.rs  hmtx.rs  mod.rs  streaming.rs
crates/oxifont-webfont/src/woff2/encode/: glyf.rs  mod.rs  varint.rs
crates/oxifont-webfont/tests/: checksum.rs  detect.rs  metadata.rs  triplet_accuracy.rs  varint_tests.rs  woff1.rs  woff1_encode.rs  woff1_roundtrip.rs  woff1_uncompressed.rs  woff2.rs  woff2_collection.rs  woff2_encode.rs  woff2_fixture.rs  woff2_private.rs  woff2_roundtrip.rs  woff2_streaming.rs
crates/oxifont/src/: lib.rs
crates/oxifont/tests/: e2e.rs  facade.rs  features.rs  integration.rs  subset_encode.rs
scripts/: ffi-audit.sh
