[package]
name = "oxifont-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust OS font-directory discovery for OxiFont"
keywords = ["font", "discovery", "system-fonts"]
categories = ["text-processing", "filesystem"]

[features]
default = ["woff1", "woff2"]
woff1 = ["dep:oxifont-webfont", "oxifont-webfont/woff1"]
woff2 = ["dep:oxifont-webfont", "oxifont-webfont/woff2"]
rayon = ["dep:rayon"]
fontconfig = ["dep:quick-xml"]
mmap = ["dep:memmap2"]

[dependencies]
oxifont-core    = { workspace = true }
oxifont-parser  = { workspace = true }
oxifont-webfont = { workspace = true, optional = true }
walkdir         = { workspace = true }
rayon           = { workspace = true, optional = true }
quick-xml       = { workspace = true, optional = true }
memmap2         = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "scan_bench"
harness = false
