[package]
name = "oxifont-subset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust OpenType font subsetter for OxiFont"
keywords = ["font", "subset", "opentype", "ttf", "pure-rust"]
categories = ["text-processing", "encoding"]

[features]
default = []
subset = []
parallel = ["dep:rayon"]

[dependencies]
oxifont-core   = { workspace = true }
oxifont-parser = { workspace = true }
ttf-parser     = { workspace = true }
rayon          = { workspace = true, optional = true }

[dev-dependencies]
ttf-parser      = { workspace = true }
oxifont-parser  = { path = "../oxifont-parser" }
criterion       = { workspace = true }

[[bench]]
name = "subset_font"
harness = false
