[package]
name = "oxifont"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust font discovery + parsing (OxiFont facade crate)"
keywords = ["font", "ttf", "opentype", "typography", "pure-rust"]
categories = ["text-processing", "graphics"]

[features]
default = ["pure", "discovery"]
pure   = ["dep:oxifont-adapter-pure"]
native = ["dep:oxifont-adapter-native"]
db     = ["dep:oxifont-db"]
woff1  = ["dep:oxifont-webfont", "oxifont-webfont/woff1"]
woff2  = ["dep:oxifont-webfont", "oxifont-webfont/woff2"]
subset = ["dep:oxifont-subset"]
discovery = ["dep:oxifont-discovery"]
bundled-noto        = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto"]
bundled-noto-serif  = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto-serif"]
bundled-noto-emoji  = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto-emoji"]
bundled-noto-cjk    = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto-cjk"]
bundled-noto-cjk-jp = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto-cjk-jp"]
bundled-noto-cjk-kr = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto-cjk-kr"]
bundled-noto-cjk-sc = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto-cjk-sc"]
bundled-noto-cjk-tc = ["dep:oxifont-bundled", "oxifont-bundled/bundled-noto-cjk-tc"]

[dependencies]
oxifont-core = { workspace = true }
oxifont-parser = { workspace = true }

[dependencies.oxifont-adapter-pure]
workspace = true
optional = true

[dependencies.oxifont-adapter-native]
workspace = true
optional = true

[dependencies.oxifont-db]
workspace = true
optional = true

[dependencies.oxifont-webfont]
workspace = true
optional = true

[dependencies.oxifont-subset]
workspace = true
optional = true

[dependencies.oxifont-bundled]
workspace = true
optional = true

[dependencies.oxifont-discovery]
workspace = true
optional = true

[dev-dependencies.oxifont-webfont]
workspace = true
features = ["woff2"]

[dev-dependencies.oxifont-subset]
workspace = true

[dev-dependencies.oxifont-parser]
workspace = true

[dev-dependencies.oxifont-discovery]
workspace = true
