[package]
name = "oxifont-subset-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxifont-subset = { path = ".." }

[[bin]]
name = "fuzz_subset"
path = "fuzz_targets/fuzz_subset.rs"
test = false
doc = false

[[bin]]
name = "fuzz_subset_by_gids"
path = "fuzz_targets/fuzz_subset_by_gids.rs"
test = false
doc = false
